# cpp-toolbox

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/junior-rocket-state/: CMakeLists.txt  Pipfile  junior-rocket-state.cpp  junior-rocket-state.hpp  junior3.ork  main.cpp  parabola-fitting-tests.cpp  simulator.cpp  simulator.hpp
examples/junior-rocket-state/data/: no-drogue-oberstufe-junior3.csv  no-drogue-unterstufe-junior3.csv  oberstufe-junior3.csv  unterstufe-junior3.csv
examples/junior-rocket-state/scripts/: visualize-simulation-data.py
include/: statistics.hpp  timed-finite-automaton.hpp
tests/: CMakeLists.txt  automaton-tests.cpp  statistics-tests.cpp  test.cpp
